# lcloud-lib

./: .gitignore  README.md  pyproject.toml
docs/: agent-remote-control.md
examples/mnist/: README.md  job.json  job.json.example  train.py
examples/session/: session.json
src/lcloud/: __init__.py  api.py  cli.py  remote.py  runner.py  supervisor.py
tests/: test_core.py
