[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lcloud-lib"
version = "0.1.0"
description = "A small personal Lambda Cloud experiment runner"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Phillip"}]
dependencies = []

[project.scripts]
lcloud = "lcloud.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

